# pfun

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  404.html  CODE_OF_CONDUCT.md  LICENSE  README.md  build.py  docker-compose.yml  free_effect.py  index.html  main.py  mkdocs.yml  mypy.ini  objects.inv  pyproject.toml  pytkdocs-0.11.1-py3-none-any.whl  pytkdocs-0.14.0-py3-none-any.whl  setup.cfg  sitemap.xml  test_mypy_plugin.py  test_types.py  tox.ini
.circleci/: config.yml
.github/: FUNDING.yml
.github/actions/lint/: action.yml
.github/workflows/: ci.yml
clock_api/: index.html
console_api/: index.html
curried_and_typesafe_operators/: index.html
dict_api/: index.html
docs/: CNAME  api_reference.md  api_reference.rst  clock_api.md  console_api.md  curried_and_typesafe_operators.md  dict_api.md  effect_api.md  effectful_but_side_effect_free.md  either_api.md  files_api.md  functions_api.md  http_api.md  hypothesis_strategies_api.md  immutable_api.md  immutable_objects_and_data.md  index.md  install.md  lens_api.md  list_api.md  logging_api.md  maybe_api.md  operator_api.md  other_resources.md  pfun_api.md  property_based_testing.md  pytkdocs-0.11.0-py3-none-any.whl  random_api.md  ref_api.md  requirements.txt  schedule_api.md  sql_api.md  stack_safety.md  state_api.md  subprocess_api.md  trampoline_api.md  useful_functions.md  what_is_this.md
docs/source/: api_reference.rst  conf.py  index.rst  programming_guide.md
effect_api/: index.html
effectful_but_side_effect_free/: index.html
either_api/: index.html
examples/: free_kvstore.py  transaction_reader.py
files_api/: index.html
functions_api/: index.html
http_api/: index.html
hypothesis_strategies_api/: index.html
immutable_api/: index.html
immutable_objects_and_data/: index.html
install/: index.html
lens_api/: index.html
list_api/: index.html
logging_api/: index.html
maybe_api/: index.html
operator_api/: index.html
other_resources/: index.html
pfun/: __init__.py  aio_trampoline.py  asgi.py  case.py  console.py  cont.py  curry.py  dict.py  effect.py  effect.pyi  effect.pyx  either.py  files.py  for_m.py  free.py  free_effect.pyx  functions.py  functor.py  http.py  immutable.py  io.py  io_test.py  list.py  logging.py  maybe.py  monad.py  monadic.py  monoid.py  mypy_plugin.py  operator.py  parse.py  pipe.py  protocol.py  reader.py  ref.py  result.py  sql.py  state.py  subprocess.py  test_types.py  (+5 more)
pfun/effect/: __init__.py  console.py  effect.py  files.py  http.py  logging.py  ref.py  sql.py  subprocess.py
pfun_api/: index.html
property_based_testing/: index.html
random_api/: index.html
ref_api/: index.html
schedule_api/: index.html
scripts/: check_version.py
search/: search_index.json
sql_api/: index.html
src/pfun/: __init__.py  aio_trampoline.py  cli.py  clock.py  console.py  dict.py  effect.pyi  effect.pyx  either.py  executors.py  files.py  functions.py  functor.py  http.py  hypothesis_strategies.py  immutable.py  lens.py  list.py  logging.py  maybe.py  monad.py  mypy_plugin.py  operator.py  protocols.py  random.py  ref.py  schedule.py  sql.py  state.py  test_types.py  trampoline.py
stack_safety/: index.html
state_api/: index.html
subprocess_api/: index.html
templates/python/material/: method.html
tests/: functor_test.py  mocks.py  monad_test.py  monoid_test.py  mypy.ini  strategies.py  test_aio_trampoline.py  test_cont.py  test_curry.py  test_dict.py  test_effect.py  test_either.py  test_executors.py  test_free.py  test_functions.py  test_immutable.py  test_intersection.py  test_io.py  test_lens.py  test_list.py  test_maybe.py  test_monoid.py  test_mypy_plugin.yaml  test_operator.py  test_pipe.py  test_reader.py  test_result.py  test_schedule.py  test_scripts.py  test_state.py  test_trampoline.py  test_types.py  test_util.py  test_writer.py  utils.py
tests/type_tests/negatives/: compose_non_composable_arguments.py  compose_non_unary_function.py  compose_return_type.py  curry_arguments.py  curry_callable_instance_arguments.py  curry_generic_arguments.py  curry_return_type.py  immutable_arguments.py  immutable_assignment.py  list_bind_arguments.py  list_bind_return_type.py  list_map_arguments.py  list_map_return_type.py  list_pure.py  maybe_bind_arguments.py  maybe_bind_return_type.py  maybe_map_arguments.py  maybe_map_return_type.py  maybe_pure.py
tests/type_tests/positives/: compose_arguments.py  compose_callable_instance_arguments.py  compose_return_type.py  curry_arguments.py  curry_generic_argument.py  curry_return_type.py  immutable_arguments.py  list_bind_arguments.py  list_bind_return_type.py  list_map_arguments.py  list_map_return_type.py  list_pure.py  maybe_bind_arguments.py  maybe_bind_return_type.py  maybe_map_arguments.py  maybe_map_return_type.py  maybe_pure.py  maybe_skip.py
trampoline_api/: index.html
useful_functions/: index.html
what_is_this/: index.html
