[tool.poetry]
name = "pfun"
version = "0.13.1"
description = "Functional, composable, asynchronous, type-safe Python."
authors = ["Sune Debel"]
readme = "README.md"
build = "build.py"
include = ["src/pfun/py.typed", "src/pfun/*.c"]

[tool.poetry.dependencies]
python = ">= 3.7, < 3.11"
typing-extensions = "^3.10.0.0"
aiohttp = {extras = ["speedups"], version = "^3.7.4", optional = true}
asyncpg = {version = "^0.21.0", optional = true}
hypothesis = {version = "^6.8.5", optional = true}
dill = "^0.3.2"

[tool.poetry.dev-dependencies]
Cython = "3.0.0a10"
pytest-mypy-plugins = "^1.3"
pytest-asyncio = "^0.11.0"
pytest = "^6.2.2"
hypothesis = "^6.8.5"
ipython = "^7.7"
ipdb = "^0.12.2"
flake8 = "^3.7"
pytest-xdist = "2.2.1"
yapf = "^0.28.0"
mypy = "0.910"
isort = "^4.3.21"
pre-commit = "^2.5.1"
pre-commit-hooks = "^3.1.0"
main-dec = "^0.1.1"
asynctest = "^0.13.0"
mkdocs = "^1.1.2"
mkdocstrings = "^0.15.0"
mkdocs-material = "^5.4.0"
taskipy = "^1.6.0"
pytkdocs = { file = "./pytkdocs-0.11.1-py3-none-any.whl" }

[tool.poetry.extras]
http = ["aiohttp"]
sql = ["asyncpg"]
test = ["hypothesis"]

[tool.taskipy.tasks]
compile = "poetry run cython --3str src/pfun/*.pyx"
install = "poetry run task compile && poetry install"
build = "poetry run task compile && poetry build"
test = "poetry run task install && poetry run pytest -rsx -n 4 --mypy-ini-file=tests/mypy.ini"
serve-docs = "poetry run task install && poetry run mkdocs serve"
lint = "poetry run pre-commit run --all"

[build-system]
requires = ["poetry>=1.1.5", "setuptools>=41.2.0"]
build-backend = "poetry.core.masonry.api"
